Error al iniciar tipo usuario corregido

--- a/src/app/pages/auth/sign-up/sign-up.page.html
+++ b/src/app/pages/auth/sign-up/sign-up.page.html
@@ -28,11 +28,11 @@
         <div *ngIf="form.controls.password.errors?.['required']"> La contraseña es requerida</div>
       </div>
       <ion-item>
-        <ion-select label="Tipo de usuario" formControlName="tipoUsuario"
-          [disabled]="form.controls.tipoUsuario.value === 'profesor'">
+        <ion-select label="Tipo de usuario" formControlName="tipoUsuario">
           <ion-select-option value="alumno">Alumno</ion-select-option>
+          <ion-select-option value="profesor">Profesor</ion-select-option>
         </ion-select>
-      </ion-item>
+      </ion-item>      
       <ion-button expand="block" fill="clear" mode="ios" class="submit" [disabled]="form.invalid" type="submit">
         Registrar
       </ion-button>
