--- a/src/app/pages/escanear/escanear.page.html
+++ b/src/app/pages/escanear/escanear.page.html
@@ -1,23 +1,13 @@
-<ion-header>
-  <ion-header>
-    <ion-toolbar>
-      <ion-title>Barcode Scanner</ion-title>
-      <ion-buttons slot="start">
-        <ion-back-button defaultHref="/"></ion-back-button>
-      </ion-buttons>
-    </ion-toolbar>
-  </ion-header>
+<ion-header [translucent]="true">
+  <ion-toolbar>
+    <ion-title>
+      Demo Barcode
+    </ion-title>
+  </ion-toolbar>
+</ion-header>
 
-  <ion-content>
-    <ion-list>
-      <ion-item *ngFor="let barcode of clase">
-        <ion-label position="stacked">{{ barcode.format }}</ion-label>
-        <ion-input type="text" [value]="barcode.rawValue"></ion-input>
-      </ion-item>
-    </ion-list>
-    <ion-fab slot="fixed" vertical="bottom" horizontal="end">
-      <ion-fab-button (click)="scan()" [disabled]="!isSupported">
-        <ion-icon name="scan"></ion-icon>
-      </ion-fab-button>
-    </ion-fab>
-  </ion-content>
+<ion-content [fullscreen]="true" class="ion-padding">
+  <ion-button (click)="scan()" expand="full" >
+    Scanear
+  </ion-button>
+</ion-content>
