mostrar alumnos y bugs arreglados

--- a/src/app/pages/asignaturaprofesor/asignaturaprofesor.page.html
+++ b/src/app/pages/asignaturaprofesor/asignaturaprofesor.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start"> <!-- Utilizamos slot="start" para posicionar a la izquierda -->
-      <ion-back-button defaultHref="/ruta-de-retroceso"></ion-back-button>
+      <ion-back-button defaultHref="/profesor"></ion-back-button>
     </ion-buttons>
     <ion-title>Generar Código</ion-title>
   </ion-toolbar>
